<resources>
    <string name="app_name">SubwayApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we3">휴일/일요일</string>
    <string name="we2">토요일</string>
    <string name="we1">평일</string>
    <string name="up">상행</string>
    <string name="down">하행</string>
    <string name="setChartet">%1$s, %2$s, %3$s</string>
    <string name="setChartet2">%1$s, %2$s, %3$s, %4$s</string>
    <string name = "kakao_app_key">050ea31122a99c46deb34d493df1108d</string>
    <string name ="kakao_scheme">kakao050ea31122a99c46deb34d493df1108d</string>
    <string name="kakaolink_host">kakaolink</string>
</resources>